# lipimerge

./: .gitignore  LICENSE  README.md  devel.bat  init.bat  markdown-styles.css  pyproject.toml  requirements.txt  run.bat  setup.bat  setup.sh
.bak/: lipimerge.bak.py
.bak/src/lipimerge/: __init__.py  __main__.py  gui.py  process.py
.bak/src/lipimerge/internal/: console.py  exceptions.py  utils.py  xutils.py
.bak/tests/data/: column_swap.xlsx  debug.xlsx  get_classes.xlsx  has_empty_data_set.xlsx  input_validation.xlsx  merge.xlsx
.bak/tests/data/main/: data-1.xlsx  data-3.xlsx  data-5.xlsx
.bak/tests/lipimerge/: test_main.py
.bak/tests/lipimerge/internal/: test_utils.py  test_xutils.py
src/lipimerge/: __main__.py  lipimerge.bak.py  lipimerge.py  process.py
src/lipimerge/internal/: exceptions.py  utils.py  xutils.py
tests/data/: clear_found_values.xlsx  column_less.xlsx  column_sort.xlsx  get_records.xlsx  merge-debug.xlsx  merge.xlsx  openpyxl.xlsx
tests/data/input_validation/: A1NotEmpty.xlsx  DuplicateCol-1.xlsx  DuplicateCol-2.xlsx  DuplicateCol-3.xlsx  DuplicateCol-4.xlsx  DuplicateCol-5.xlsx  DuplicateCol-6.xlsx  DuplicateRow-1.xlsx  DuplicateRow-2.xlsx  DuplicateRow-3.xlsx  DuplicateRow-4.xlsx  DuplicateRow-5.xlsx  DuplicateRow-6.xlsx  InvalidColumn-1.xlsx  InvalidColumn-2.xlsx  InvalidColumn-3.xlsx  InvalidRow-1.xlsx  InvalidRow-2.xlsx  InvalidRow-3.xlsx  Valid-and-Invalid.xlsx  Valid-and-Invalid_count129.xlsx  Valid.xlsx  debug.txt
tests/data/main/: data-2.xlsx  data-4.xlsx
tests/lipimerge/internal/: test_utils.py  test_xutils.py
(+4 files in other folders)
